--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,7 @@
 version: 2.1
 orbs:
   coveralls: coveralls/coveralls@2.2.1
+  browser-tools: circleci/browser-tools@1.4.3
   cypress: cypress-io/cypress@3.1.3
 commands:
   install:
@@ -42,6 +43,8 @@ commands:
         type: boolean
         default: true
     steps:
+      - browser-tools/install-chrome
+      - browser-tools/install-chromedriver
       - run: npx ng build --configuration production --project << parameters.project >>
       - when:
           condition: << parameters.run-tests >>
