--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "aws:deploy": "cross-conf-env docker run --env-file ./.env silintl/ecs-deploy -c $npm_package_config_awsEcsCluster -n $npm_package_config_awsService -i $npm_package_config_imageRepo:latest -r $npm_package_config_awsRegion --timeout 1000",
     "aws:release": "run-s -cs aws:login docker:publish aws:deploy",
     "init:env": "init-dev-env generate-dot-env example.env -f",
-    "lint:ts": "tslint --config tslint.json --project . -e \"**/{test,polyfills}.ts\"",
+    "lint:ts": "tslint --config tslint.json --project . -e \"**/{test,polyfills}.ts\" -e \"./cypress.config.ts\" -e \"**/cypress/**/**.ts\"",
     "lint:ts:fix": "tslint --config tslint.json --fix --project . -e \"**/{test,polyfills}.ts\"",
     "lint:tsc": "tsc --noEmit --skipLibCheck",
     "docker:stop": "cross-conf-env docker stop $npm_package_config_imageName || true",
@@ -95,6 +95,7 @@
     "angular-unit-test-helper": "^13.0.3",
     "codelyzer": "^6.0.2",
     "cross-conf-env": "^1.2.1",
+    "cypress": "^12.17.3",
     "dev-norms": "^2.0.4",
     "fake-jwt-sign": "^1.1.1",
     "http-server": "^14.1.1",
