--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,7 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+  "include": ["src", "node_modules/cypress"],
+  "exclude": ["node_modules/cypress"]
 }
