check in cypress

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,5 +50,8 @@
   "editor.autoIndent": "full",
   "[shellscript]": {
     "editor.defaultFormatter": "foxundermoon.shell-format"
+  },
+  "[ignore]": {
+    "editor.defaultFormatter": "foxundermoon.shell-format"
   }
 }
