--- a/package.json
+++ b/package.json
@@ -63,7 +63,6 @@
     "@angular/compiler": "14.3.0",
     "@angular/core": "14.3.0",
     "@angular/fire": "^7.2.0",
-    "@angular/flex-layout": "^14.0.0-beta.41",
     "@angular/forms": "14.3.0",
     "@angular/material": "14.2.7",
     "@angular/platform-browser": "14.3.0",
@@ -76,32 +75,33 @@
     "@ngrx/store-devtools": "^14.3.3",
     "firebase": "^9.23.0",
     "jwt-decode": "^3.1.2",
-    "ngx-mask": "^12.0.0",
-    "rxjs": "^7.5.0",
+    "ngx-mask": "^15.1.5",
+    "rxjs": "^7.8.1",
     "subsink": "^1.0.2",
     "ts-enum-util": "^4.0.2",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.12",
     "@angular/cli": "^14.2.12",
     "@angular/compiler-cli": "14.3.0",
     "@angular/language-service": "14.3.0",
-    "@types/jasmine": "~3.8.2",
+    "@ngbracket/ngx-layout": "^15.1.3",
+    "@types/jasmine": "~4.3.5",
     "@types/jasminewd2": "~2.0.10",
-    "@types/jsonwebtoken": "^8.5.4",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/jwt-decode": "^2.2.1",
-    "@types/node": "^16.4.10",
-    "angular-unit-test-helper": "^14.0.1",
+    "@types/node": "^20.4.9",
+    "angular-unit-test-helper": "^15.0.0",
     "codelyzer": "^6.0.2",
-    "cross-conf-env": "^1.2.1",
+    "cross-conf-env": "^1.3.0",
     "cypress": "^12.17.3",
     "dev-norms": "^2.0.4",
     "fake-jwt-sign": "^1.1.1",
     "http-server": "^14.1.1",
     "init-dev-env": "^2.0.0",
-    "jasmine": "^4.0.2",
-    "jasmine-core": "^4.0.1",
+    "jasmine": "^4.3.0",
+    "jasmine-core": "^4.3.0",
     "jasmine-spec-reporter": "~7.0.0",
     "js-beautify": "^1.14.0",
     "karma": "~6.3.4",
@@ -114,7 +114,7 @@
     "karma-jasmine-html-reporter": "^1.7.0",
     "ng-mocks": "^14.11.0",
     "npm-run-all": "^4.1.5",
-    "open-cli": "^7.0.0",
+    "open-cli": "^7.2.0",
     "prettier": "^2.3.2",
     "protractor": "^7.0.0",
     "rimraf": "^5.0.1",
