--- a/package.json
+++ b/package.json
@@ -13,16 +13,15 @@
   },
   "scripts": {
     "ng": "ng",
-    "style:fix": "prettier --write \"**/{src,tests,e2e}/**/*.{*css,ts}\"",
-    "style": "prettier --check \"**/{src,tests,e2e}/**/*.{*css,ts}\"",
+    "style:fix": "prettier --write \"**/{src,tests,e2e}/**/*.{*css,ts,html}\"",
+    "style": "prettier --check \"**/{src,tests,e2e}/**/*.{*css,ts,html}\"",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test lemon-mart --browsers Chrome",
     "test:debug": "npm test -- --browsers Chrome --source-map",
-    "lint": "run-p lint:ts lint:tsc",
-    "lint:fix": "run-s lint:ts:fix lint:tsc",
-    "e2e": "ng e2e lemon-mart",
+    "lint": "ng lint",
+    "lint:fix": "ng lint --fix",
     "build:prod": "ng build --configuration production",
     "build:integration": "cross-conf-env docker image build -f integration.Dockerfile . -t $npm_package_config_imageRepo:latest",
     "test:prod": "npm test -- --browsers ChromiumNoSandbox --watch=false",
@@ -83,6 +82,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.9",
+    "@angular-eslint/builder": "15.2.1",
+    "@angular-eslint/eslint-plugin": "15.2.1",
+    "@angular-eslint/eslint-plugin-template": "15.2.1",
+    "@angular-eslint/schematics": "15.2.1",
+    "@angular-eslint/template-parser": "15.2.1",
     "@angular/cli": "^15.2.9",
     "@angular/compiler-cli": "15.2.9",
     "@angular/language-service": "15.2.9",
@@ -92,23 +96,25 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/jwt-decode": "^2.2.1",
     "@types/node": "^20.4.9",
+    "@typescript-eslint/eslint-plugin": "5.48.2",
+    "@typescript-eslint/parser": "5.48.2",
     "angular-unit-test-helper": "^15.0.0",
     "cross-conf-env": "^1.3.0",
     "cypress": "^12.17.3",
     "dev-norms": "^2.0.4",
+    "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-cypress": "^2.10.3",
     "fake-jwt-sign": "^1.1.1",
     "http-server": "^14.1.1",
     "init-dev-env": "^2.0.0",
     "jasmine": "^4.3.0",
     "jasmine-core": "^4.3.0",
     "jasmine-spec-reporter": "~7.0.0",
-    "js-beautify": "^1.14.0",
     "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "~2.0.0",
     "karma-coverage-istanbul-reporter": "~3.0.3",
-    "karma-edge-launcher": "^0.4.2",
-    "karma-htmlfile-reporter": "^0.3.8",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
     "ng-mocks": "^14.11.0",
@@ -117,11 +123,6 @@
     "prettier": "^2.3.2",
     "rimraf": "^5.0.1",
     "ts-node": "~10.1.0",
-    "tslib": "^2.6.1",
-    "tslint": "~6.1.3",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-etc": "^1.13.10",
-    "tslint-plugin-prettier": "^2.3.0",
     "tsutils": "^3.21.0",
     "typescript": "^4.9.5"
   }
