relax test config

--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -5,6 +5,6 @@
     "noImplicitAny": false,
     "types": ["jasmine", "node"]
   },
-  "files": ["src/test.ts", "src/polyfills.ts"],
-  "include": ["src/**/*.spec.ts", "src/**/*.d.ts"]
+  "files": ["**/src/test.ts", "**/src/polyfills.ts"],
+  "include": ["**/src/**/*.spec.ts", "**/src/**/*.d.ts"]
 }
