--- a/package.json
+++ b/package.json
@@ -82,11 +82,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.0",
-    "@angular-eslint/builder": "15.2.1",
-    "@angular-eslint/eslint-plugin": "15.2.1",
-    "@angular-eslint/eslint-plugin-template": "15.2.1",
-    "@angular-eslint/schematics": "15.2.1",
-    "@angular-eslint/template-parser": "15.2.1",
+    "@angular-eslint/builder": "16.1.0",
+    "@angular-eslint/eslint-plugin": "16.1.0",
+    "@angular-eslint/eslint-plugin-template": "16.1.0",
+    "@angular-eslint/schematics": "16.1.0",
+    "@angular-eslint/template-parser": "16.1.0",
     "@angular/cli": "^16.2.0",
     "@angular/compiler-cli": "16.2.0",
     "@angular/language-service": "16.2.0",
@@ -96,13 +96,13 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/jwt-decode": "^2.2.1",
     "@types/node": "^20.4.9",
-    "@typescript-eslint/eslint-plugin": "5.48.2",
-    "@typescript-eslint/parser": "5.48.2",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
     "angular-unit-test-helper": "^16.0.0",
     "cross-conf-env": "^1.3.0",
     "cypress": "^12.17.3",
     "dev-norms": "^2.0.4",
-    "eslint": "^8.33.0",
+    "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-cypress": "^2.10.3",
     "fake-jwt-sign": "^1.1.1",
