--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "test:debug": "npm test -- --browsers Chrome --source-map",
     "lint": "ng lint",
     "lint:fix": "ng lint --fix",
+    "e2e": "ng e2e",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
     "build:prod": "ng build --configuration production",
     "build:integration": "cross-conf-env docker image build -f integration.Dockerfile . -t $npm_package_config_imageRepo:latest",
     "test:prod": "npm test -- --browsers ChromiumNoSandbox --watch=false",
     "test:prod:e2e": "npm run e2e",
-    "cypress:run": "cypress run",
     "test:coverage": "npm test -- --browsers ChromiumNoSandbox --watch=false --code-coverage",
     "posttest:coverage": "http-server -c-1 -o -p 9875 ./coverage",
     "predocker:build": "npm run build",
@@ -52,9 +54,7 @@
     "lint:ts:fix": "tslint --config tslint.json --fix --project . -e \"**/{test,polyfills}.ts\"",
     "lint:tsc": "tsc --noEmit --skipLibCheck",
     "docker:stop": "cross-conf-env docker stop $npm_package_config_imageName || true",
-    "docker:open": "sleep 2 && cross-conf-env open-cli http://localhost:$npm_package_config_imagePort",
-    "e2e": "ng e2e",
-    "cypress:open": "cypress open"
+    "docker:open": "sleep 2 && cross-conf-env open-cli http://localhost:$npm_package_config_imagePort"
   },
   "private": true,
   "dependencies": {
@@ -116,10 +116,10 @@
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-cli": "~2.0.0",
-    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-coverage": "^2.2.1",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
+    "karma-junit-reporter": "^2.0.1",
     "ng-mocks": "^14.11.0",
     "npm-run-all": "^4.1.5",
     "open-cli": "^7.2.0",
