--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@angular/material": "16.2.1",
     "@angular/platform-browser": "16.2.2",
     "@angular/platform-browser-dynamic": "16.2.2",
+    "@angular/platform-server": "16.2.2",
     "@angular/router": "16.2.2",
     "@ngrx/data": "^16.2.0",
     "@ngrx/effects": "^16.2.0",
@@ -76,6 +77,7 @@
     "@ngrx/store-devtools": "^16.2.0",
     "firebase": "^9.23.0",
     "jwt-decode": "^3.1.2",
+    "localstorage-polyfill": "^1.0.1",
     "ngx-mask": "^16.2.9",
     "rxjs": "^7.8.1",
     "subsink": "^1.0.2",
@@ -97,6 +99,7 @@
     "@types/jasmine": "~4.3.5",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/jwt-decode": "^2.2.1",
+    "@types/node": "^16.11.7",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
     "angular-unit-test-helper": "^16.0.0",
