--- a/angular.json
+++ b/angular.json
@@ -268,6 +268,14 @@
             "scripts": []
           },
           "configurations": {
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true
+            },
             "production": {
               "budgets": [
                 {
@@ -299,6 +307,9 @@
           "configurations": {
             "production": {
               "browserTarget": "stage7:build:production"
+            },
+            "development": {
+              "browserTarget": "stage7:build:development"
             }
           }
         },
