--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     "open-cli": "^7.2.0",
     "prettier": "^3.0.2",
     "rimraf": "^5.0.1",
+    "rxjs-debug": "^1.3.0",
     "typescript": "^5.1.6"
   }
 }
