--- a/package.json
+++ b/package.json
@@ -69,12 +69,15 @@
     "@angular/platform-browser": "16.2.3",
     "@angular/platform-browser-dynamic": "16.2.3",
     "@angular/router": "16.2.3",
+    "@apollo/client": "^3.8.3",
     "@ngrx/data": "^16.2.0",
     "@ngrx/effects": "^16.2.0",
     "@ngrx/entity": "^16.2.0",
     "@ngrx/store": "^16.2.0",
     "@ngrx/store-devtools": "^16.2.0",
+    "apollo-angular": "^5.0.1",
     "firebase": "^9.23.0",
+    "graphql": "^16.8.0",
     "jwt-decode": "^3.1.2",
     "ngx-mask": "^16.2.9",
     "rxjs": "^7.8.1",
