--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,7 @@
   "overrides": [
     {
       "files": ["*.ts"],
-      "plugins": ["simple-import-sort"],
+      "plugins": ["simple-import-sort", "unused-imports"],
       "extends": [
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
@@ -20,6 +20,18 @@
         "simple-import-sort/exports": "warn",
         "sort-imports": "off",
         "import/order": "off",
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": "off",
+        "unused-imports/no-unused-imports": "error",
+        "unused-imports/no-unused-vars": [
+          "warn",
+          {
+            "vars": "all",
+            "varsIgnorePattern": "^_",
+            "args": "after-used",
+            "argsIgnorePattern": "^_"
+          }
+        ],
         "@angular-eslint/directive-selector": [
           "error",
           {
