--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "build:prod": "ng build --configuration production",
+    "build:all": "run-p -cs \"build:prod\" \"build:prod --project stage8\" \"build:prod --project stage10\" \"build:prod --project stage11\" \"build:prod --project stage12\"",
     "build:integration": "cross-conf-env docker image build -f integration.Dockerfile . -t $npm_package_config_imageRepo:latest",
     "test:prod": "npm test -- --browsers ChromiumNoSandbox --watch=false",
+    "test:ci": "ng test --browsers=ChromeHeadless --watch=false --no-progress --code-coverage",
+    "test:all": "run-p -cs \"test:ci --project lemon-mart\" \"test:ci --project stage8\" \"test:ci --project stage10\" \"test:ci --project stage11\" \"test:ci --project stage12\"",
     "test:prod:e2e": "npm run e2e",
     "test:coverage": "npm test -- --browsers ChromiumNoSandbox --watch=false --code-coverage",
     "posttest:coverage": "http-server -c-1 -o -p 9875 ./coverage",
