--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test:debug": "npm test -- --browsers Chrome --source-map",
     "lint": "ng lint",
     "lint:fix": "ng lint --fix",
-    "e2e": "ng e2e",
+    "e2e": "ng e2e --browser electron",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "build:prod": "ng build --configuration production",
@@ -61,61 +61,59 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "16.2.3",
-    "@angular/cdk": "16.2.2",
-    "@angular/common": "16.2.3",
-    "@angular/compiler": "16.2.3",
-    "@angular/core": "16.2.3",
-    "@angular/fire": "^7.6.1",
-    "@angular/forms": "16.2.3",
-    "@angular/material": "16.2.2",
-    "@angular/platform-browser": "16.2.3",
-    "@angular/platform-browser-dynamic": "16.2.3",
-    "@angular/router": "16.2.3",
-    "@apollo/client": "^3.8.3",
-    "@ngrx/data": "^16.2.0",
-    "@ngrx/effects": "^16.2.0",
-    "@ngrx/entity": "^16.2.0",
-    "@ngrx/store": "^16.2.0",
-    "@ngrx/store-devtools": "^16.2.0",
-    "apollo-angular": "^5.0.1",
-    "firebase": "^9.23.0",
-    "graphql": "^16.8.0",
-    "jwt-decode": "^3.1.2",
-    "ngx-mask": "^16.2.9",
+    "@angular/animations": "16.2.12",
+    "@angular/cdk": "16.2.11",
+    "@angular/common": "16.2.12",
+    "@angular/compiler": "16.2.12",
+    "@angular/core": "16.2.12",
+    "@angular/fire": "^16.0.0",
+    "@angular/forms": "16.2.12",
+    "@angular/material": "16.2.11",
+    "@angular/platform-browser": "16.2.12",
+    "@angular/platform-browser-dynamic": "16.2.12",
+    "@angular/router": "16.2.12",
+    "@apollo/client": "^3.8.7",
+    "@ngrx/data": "^16.3.0",
+    "@ngrx/effects": "^16.3.0",
+    "@ngrx/entity": "^16.3.0",
+    "@ngrx/store": "^16.3.0",
+    "@ngrx/store-devtools": "^16.3.0",
+    "apollo-angular": "^5.0.2",
+    "graphql": "^16.8.1",
+    "jwt-decode": "^4.0.0",
+    "ngx-mask": "^16.3.9",
     "rxjs": "^7.8.1",
     "ts-enum-util": "^4.0.2",
     "zone.js": "~0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.0",
-    "@angular-eslint/builder": "16.1.2",
-    "@angular-eslint/eslint-plugin": "16.1.2",
-    "@angular-eslint/eslint-plugin-template": "16.1.2",
-    "@angular-eslint/schematics": "16.1.2",
-    "@angular-eslint/template-parser": "16.1.2",
-    "@angular/cli": "^16.2.0",
-    "@angular/compiler-cli": "16.2.3",
-    "@angular/language-service": "16.2.3",
-    "@cypress/schematic": "^2.5.0",
-    "@ngbracket/ngx-layout": "^16.0.0",
-    "@types/jasmine": "~4.3.5",
-    "@types/jsonwebtoken": "^9.0.2",
+    "@angular-devkit/build-angular": "^16.2.9",
+    "@angular-eslint/builder": "16.2.0",
+    "@angular-eslint/eslint-plugin": "16.2.0",
+    "@angular-eslint/eslint-plugin-template": "16.2.0",
+    "@angular-eslint/schematics": "16.2.0",
+    "@angular-eslint/template-parser": "16.2.0",
+    "@angular/cli": "^16.2.9",
+    "@angular/compiler-cli": "16.2.12",
+    "@angular/language-service": "16.2.12",
+    "@cypress/schematic": "^2.5.1",
+    "@ngbracket/ngx-layout": "^16.1.3",
+    "@types/jasmine": "~5.1.1",
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/jwt-decode": "^2.2.1",
-    "@typescript-eslint/eslint-plugin": "^6.5.0",
-    "@typescript-eslint/parser": "^6.5.0",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
     "angular-unit-test-helper": "^16.0.0",
     "cross-conf-env": "^1.3.0",
-    "cypress": "^12.17.4",
+    "cypress": "^13.4.0",
     "dev-norms": "^2.0.4",
-    "eslint": "^8.48.0",
+    "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-cypress": "^2.14.0",
-    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-cypress": "^2.15.1",
+    "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "fake-jwt-sign": "^1.1.1",
-    "firebase-tools": "^12.5.2",
     "http-server": "^14.1.1",
     "init-dev-env": "^2.0.0",
     "jasmine-core": "^5.1.1",
@@ -128,8 +126,8 @@
     "ng-mocks": "^14.11.0",
     "npm-run-all": "^4.1.5",
     "open-cli": "^7.2.0",
-    "prettier": "^3.0.2",
-    "rimraf": "^5.0.1",
+    "prettier": "^3.0.3",
+    "rimraf": "^5.0.5",
     "typescript": "^5.1.6"
   }
 }
