--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "cypress:run": "cypress run",
     "build:prod": "ng build --configuration production",
     "build:all": "run-p -cs \"build:prod\" \"build:prod --project stage8\" \"build:prod --project stage10\" \"build:prod --project stage11\" \"build:prod --project stage12\"",
-    "build:integration": "cross-conf-env docker image build -f integration.Dockerfile . -t $npm_package_config_imageRepo:latest",
+    "build:integration": "cross-conf-env docker image build -f integration.Dockerfile --platform linux/amd64,linux/arm64 . -t $npm_package_config_imageRepo:latest",
     "test:prod": "npm test -- --browsers ChromiumNoSandbox --watch=false",
     "test:ci": "ng test --browsers=ChromeHeadless --watch=false --no-progress --code-coverage",
     "test:all": "run-p -cs \"test:ci --project lemon-mart\" \"test:ci --project stage8\" \"test:ci --project stage10\" \"test:ci --project stage11\" \"test:ci --project stage12\"",
@@ -35,7 +35,7 @@
     "test:coverage": "npm test -- --browsers ChromiumNoSandbox --watch=false --code-coverage",
     "posttest:coverage": "http-server -c-1 -o -p 9875 ./coverage",
     "predocker:build": "npm run build",
-    "docker:build": "cross-conf-env docker image build . -t $npm_package_config_imageRepo:$npm_package_version",
+    "docker:build": "cross-conf-env docker image build --platform linux/amd64,linux/arm64 . -t $npm_package_config_imageRepo:$npm_package_version",
     "postdocker:build": "npm run docker:tag",
     "docker:tag": " cross-conf-env docker image tag $npm_package_config_imageRepo:$npm_package_version $npm_package_config_imageRepo:latest",
     "docker:run": "run-s -c docker:stop docker:runHelper",
