--- a/.circleci/config.stage9.yml
+++ b/.circleci/config.stage9.yml
@@ -1,46 +1,73 @@
 version: 2.1
 orbs:
-  coveralls: coveralls/coveralls@2.2.1
-jobs:
-  build:
-    docker:
-      - image: cimg/node:lts-browsers
-    working_directory: ~/repo
+  coveralls: coveralls/coveralls@2
+  browser-tools: circleci/browser-tools@1
+  cypress: cypress-io/cypress@3
+commands:
+  install:
+    description: 'Install project dependencies'
+    parameters:
+      warm-cache:
+        type: boolean
+        default: false
     steps:
       - checkout
       - restore_cache:
           keys:
-            - v1-dependencies-{{ checksum "package-lock.json" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
-
-      - run: npm ci
-
-      # because we use "npm ci" to install NPM dependencies
-      # we cache "~/.npm" folder
-      - save_cache:
-          paths:
-            - ~/.npm
-          key: v1-dependencies-{{ checksum "package-lock.json" }}
-
+            - node_modules-{{ checksum "package-lock.json" }}
+      - when:
+          condition: << parameters.warm-cache >>
+          steps:
+            - run: npm ci
+            - save_cache:
+                key: node_modules-{{ checksum "package-lock.json" }}
+                paths:
+                  - node_modules
+  lint:
+    description: 'Check for code style and linting errors'
+    steps:
       - run: npm run style
       - run: npm run lint
-      - run: npm run build:prod
-      - run: npm test -- --watch=false --code-coverage
-
+  build_and_test:
+    description: 'Build command that accepts Angular project name as parameter'
+    parameters:
+      project:
+        type: string
+        default: 'lemon-mart'
+      run-tests:
+        type: boolean
+        default: true
+    steps:
+      - run: npx ng build --configuration production --project << parameters.project >>
+      - when:
+          condition: << parameters.run-tests >>
+          steps:
+            - attach_workspace:
+                at: ~/
+            - browser-tools/install-chrome
+            - browser-tools/install-chromedriver
+            - run: npx ng test --watch=false --project << parameters.project >> --code-coverage
+  store:
+    description: 'Stores build_and_test artifacts'
+    parameters:
+      project:
+        type: string
+        default: 'lemon-mart'
+    steps:
       - store_test_results:
           path: ./test_results
       - store_artifacts:
           path: ./coverage
 
       # upload coverage report to coveralls for readme badge support
-      # requires config.yml version 2.1 and orbs: coveralls: coveralls/coveralls@1.0.4
+      # requires the orbs coveralls: coveralls/coveralls@2
       # requires coveralls account and token named COVERALLS_REPO_TOKEN specific to repo to be stored in CircleCI
       - coveralls/upload
+      # https://docs.cypress.io/guides/tooling/code-coverage
 
       - run:
           name: Tar & Gzip compiled app
-          command: tar zcf dist.tar.gz dist/lemon-mart
+          command: tar zcf dist.tar.gz dist/<< parameters.project >>
       - store_artifacts:
           path: dist.tar.gz
 
@@ -49,31 +76,61 @@ jobs:
           command: |
             set -exu
             mkdir -p /tmp/workspace/dist
-            mv dist/lemon-mart /tmp/workspace/dist/
+            mv dist/<< parameters.project >> /tmp/workspace/dist/
       - persist_to_workspace:
           root: /tmp/workspace
           paths:
-            - dist/lemon-mart
+            - dist/<< parameters.project >>
+  deploy_vercel:
+    description: 'Deploys project to Vercel --> https://vercel.com'
+    parameters:
+      project:
+        type: string
+        default: 'lemon-mart'
+    steps:
+      - attach_workspace:
+          at: /tmp/workspace
+      - run: npx vercel deploy --token $VERCEL_TOKEN --prod /tmp/workspace/dist/<< parameters.project >> --yes
+jobs:
+  initialize:
+    docker:
+      - image: cimg/node:lts-browsers
+    working_directory: ~/repo
+    steps:
+      - install:
+          warm-cache: true
+      - cypress/install
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - .cache/Cypress
+  default:
+    docker:
+      - image: cimg/node:lts-browsers
+    working_directory: ~/repo
+    steps:
+      - install
+      - lint
+      - build_and_test
+      - run: npx ng run lemon-mart:cypress-run
+      - store
   deploy:
     docker:
       - image: cimg/node:lts
     working_directory: ~/repo
     steps:
-      - attach_workspace:
-          at: /tmp/workspace
-      - run: npx vercel deploy --token $VERCEL_TOKEN --prod /tmp/workspace/dist/lemon-mart --yes
+      - deploy_vercel
 workflows:
   build-test-and-approval-deploy:
     jobs:
-      - build
-      - hold:
-          type: approval
+      - initialize
+      - default:
           requires:
-            - build
-          filters:
-            branches:
-              only: main
+            - initialize
       - deploy:
           context: vercel
           requires:
-            - hold
+            - default
+          filters:
+            branches:
+              only: main
