--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
     "@types/jwt-decode": "^2.2.1",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
-    "angular-unit-test-helper": "^16.0.0",
+    "angular-unit-test-helper": "^17.0.0-beta.1",
     "cross-conf-env": "^1.3.0",
     "cypress": "^13.4.0",
     "dev-norms": "^2.0.4",
