--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lemon-mart",
-  "version": "16.0.0",
+  "version": "17.0.0",
   "license": "MIT",
   "config": {
     "imageRepo": "073020584345.dkr.ecr.us-east-1.amazonaws.com/lemon-mart",
@@ -103,7 +103,7 @@
     "@types/jwt-decode": "^2.2.1",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
-    "angular-unit-test-helper": "^17.0.0-beta.1",
+    "angular-unit-test-helper": "^17.0.2",
     "cross-conf-env": "^1.3.0",
     "cypress": "^13.4.0",
     "dev-norms": "^2.0.4",
