--- a/example.env
+++ b/example.env
@@ -1,3 +1,4 @@
 # Document required environment variables for .env file here
 # Execute npm run init:env to generate a .env file from example
-MY_VAR=defaultValue
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
