--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,6 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+  "exclude": ["cypress.config.ts", "**/cypress.config.ts, cypress, **/cypress"]
 }
