--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@ngrx/data": "^17.0.1",
     "@ngrx/effects": "^17.0.1",
     "@ngrx/entity": "^17.0.1",
+    "@ngrx/signals": "^17.0.1",
     "@ngrx/store": "^17.0.1",
     "@ngrx/store-devtools": "^17.0.1",
     "apollo-angular": "^6.0.0",
