--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,15 +14,17 @@ commands:
       - checkout
       - restore_cache:
           keys:
-            - node_modules-{{ checksum "package-lock.json" }}
+            - npm-cache-{{ checksum "package-lock.json" }}
+            # Fallback key to use the latest cache if no exact match is found
+            - npm-cache-
       - when:
           condition: << parameters.warm-cache >>
           steps:
             - run: npm ci
             - save_cache:
-                key: node_modules-{{ checksum "package-lock.json" }}
+                key: npm-cache-{{ checksum "package-lock.json" }}
                 paths:
-                  - node_modules
+                  - ~/.npm
   lint:
     description: 'Check for code style and linting errors'
     steps:
